[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/UI/menu/menuBackground.png" type="Texture" id=1]
[ext_resource path="res://sprites/UI/menu/title.png" type="Texture" id=2]
[ext_resource path="res://sprites/UI/menu/buttons/Play_btn.png" type="Texture" id=3]
[ext_resource path="res://sprites/UI/menu/buttons/Credit_btn.png" type="Texture" id=4]
[ext_resource path="res://sprites/UI/menu/buttons/Credits_presd.png" type="Texture" id=5]
[ext_resource path="res://sprites/UI/menu/buttons/Play_btn_presd.png" type="Texture" id=6]
[ext_resource path="res://script/UI/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://sounds/UI/Click.mp3" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 17, 24, 31, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 17, 24, 31, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 8, 23, 48, 18 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 8, 23, 48, 18 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("click:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "click"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("click:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.729412 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -728.0
margin_top = -704.0
margin_right = 1320.0
margin_bottom = 1344.0
rect_scale = Vector2( 0.75, 0.703 )
texture = ExtResource( 1 )
stretch_mode = 5

[node name="title" type="Sprite" parent="."]
position = Vector2( 0, -272 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="play_button" type="TextureButton" parent="."]
margin_left = -104.0
margin_top = -72.0
margin_right = -73.0
margin_bottom = -56.0
rect_scale = Vector2( 7, 7 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )

[node name="credit_button" type="TextureButton" parent="."]
margin_left = -160.0
margin_top = 96.0
margin_right = -112.0
margin_bottom = 114.0
rect_scale = Vector2( 7, 7 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 4 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/click = SubResource( 6 )

[connection signal="button_down" from="play_button" to="." method="_on_play_button_button_down"]
[connection signal="button_up" from="play_button" to="." method="_on_play_button_button_up"]
[connection signal="button_down" from="credit_button" to="." method="_on_credit_button_button_down"]
[connection signal="button_up" from="credit_button" to="." method="_on_credit_button_button_up"]
